--- a/weapp/apps/customerized_apps/evaluate/templates/editor/evaluate_relations.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/editor/evaluate_relations.html
@@ -14,7 +14,7 @@
 			<li>您当前所在位置</li>
 			<li><a href="/mall2/product_list/?shelve_type=1">商品管理</a></li>
 			<li><a href="/apps/evaluate/evaluates/">评价管理</a></li>
-			<li class="active">评价关联</li>
+			<li class="active">关联评价</li>
 		</ul>
 	</div>
 	
@@ -35,7 +35,7 @@
 		<div class="xui-i-col">
 			<div class="ml80">
 				<a class="btn btn-primary mr30 xa-search xui-fontBold" href="javascript:void(0);">查&nbsp;&nbsp;&nbsp;&nbsp;询</a>
-				<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">批量导出</a>
+				<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">重&nbsp;&nbsp;&nbsp;&nbsp;置</a>
 			</div>
 		</div>
 	</div>
