--- a/weapp/apps/customerized_apps/evaluate/templates/editor/evaluates.html
+++ b/weapp/apps/customerized_apps/evaluate/templates/editor/evaluates.html
@@ -53,7 +53,8 @@
     line-height:50px;
 }
 .xui-evaluate-table{
-    margin-top: 10px;
+    margin-top: 20px;
+    margin-bottom: 0;
 }
 .xui-evaluate-table > tbody> tr > td{
     text-align: left;
